Fix #348: Afterburner parent-classloader caching silently broken on Java 9+